--- a/src/main/webapp/static/css/styleSheet.css
+++ b/src/main/webapp/static/css/styleSheet.css
@@ -49,14 +49,14 @@ body::before {
     height: 100%;
     z-index: -1;
     opacity: 0.2;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     background-position: 50% 0;
     -ms-background-size: cover;
     -o-background-size: cover;
     -moz-background-size: cover;
     -webkit-background-size: cover;
     background-size: cover;
-    background-image: url('../images/background-image.jpg');
+    background-image: url("/temperature-data-application/static/images/background-image.jpg");
 }
 
 .title {
@@ -68,11 +68,15 @@ input:focus {
 }
 
 h1 {
-    font-weight: bold;
+    font-weight: normal;
+    font-size: 30px;
     background-color: #9900cc;
-    margin: 100px;
+    margin: 10px;
     color: white;
+    align: center;
+
 }
+
 
 button {
     margin-right: 0;
@@ -116,25 +120,6 @@ legend {
     align: center;
 }
 
-table{
-    margin: auto;
-    width: 700px;
-}
-
-th,td{
-    padding: 5px, 10px, 10px, 10px;
-}
-
-th{
-    text-align: left;
-}
-
-tr.even{
-    background-color: #d980ff;
-}
-tr.odd{
-    background-color: #f7e6ff;
-}
 button:focus {
     border: 2px solid #333;
 }
@@ -143,3 +128,119 @@ button:focus {
 .back-white{
     background-color: white;
 }
+
+#currentView {
+    height: 500px;
+    width: 80%;
+    background-color: "#f6e6fb";
+    align: center;
+    padding-top: 5px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    border-width: 1px;
+    border-style: ridge;
+    border-color: #9900cc;
+    position: relative;
+    left: 80px;
+    top: 50px;
+}
+
+#hourlyGraph {
+    height: 700px;
+    width: 90%;
+    background-color: white;
+    opacity: 1;
+    align: center;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    border-width: 1px;
+    border-style: ridge;
+    border-color: #9900cc;
+    position: relative;
+    left: 80px;
+    top: 70px;
+    bottom: 20px;
+}
+
+img.timeIcon{
+    height: 40px;
+    width: 40px;
+    float: left;
+}
+
+#currentDateField{
+    height: 65px;
+    width: 45%;
+    padding: 10px;
+    border-color: #EF850B;
+    border-width: 2px;
+    border-style: solid;
+    position: absolute;
+    left: 30px;
+    top: 70px;
+
+}
+
+#currentTimeField{
+    height: 65px;
+    width: 45%;
+    padding: 10px;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    position: absolute;
+    right: 30px;
+    top: 70px;
+}
+
+#svgFloor{
+    height: 65%;
+    width: 70%;
+    border-width: 1px;
+    border-color: #cc0099;
+    border-style: solid;
+    position: absolute;
+    left: 40px;
+    bottom: 20px;
+}
+
+ label.timeIcon{
+    font-size: 20px;
+    font-weight: bold;
+    font-color: black;
+    width: 20%;
+    height: 30px;
+    position: absolute;
+    left: 70px;
+    top: 20px;
+ }
+
+ label.timeValue{
+    font-size: 20px;
+    font-weight: bold;
+    font-color: black;
+    width: 50%;
+    height: 30px;
+    background-color: white;
+    position: absolute;
+    right: 30px;
+    top: 20px;
+ }
+
+ #xAxis{
+    height: 32px;
+    width: 1160px;
+	position: absolute;
+	top: 385px;
+	left: 90px;
+ }
+ #yAxis{
+    height: 250px;
+    width: 59px;
+	position: absolute;
+	top: 142px;
+	left: 85px;
+ }
